--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,35 @@ hr {
     -webkit-line-clamp: 2; /* number of lines to show */
     -webkit-box-orient: vertical;
 }
+
+.input-focus {
+    border: none;
+}
+
+.input-focus:focus {
+    outline:0px ;
+    box-shadow: none ;
+}
+
+.btn-color {
+    color: white;
+    background-color: cornflowerblue;
+}
+
+.bg-color {
+    background-color: cornflowerblue;
+}
+
+.bg-download {
+    /* height: 40vh; */
+    padding: 50px 0;
+    background-size: cover;
+    background-position: top;
+    background-attachment: fixed;
+    background-image: url('/asset/sahara.png');
+}
+
+.link {
+    text-decoration: none;
+    color: white;
+}
